[package]
name = "heart_buddy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
http-body-util = "0.1.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = "0.4.23"
futures = "0.3.25"
bytes = "1.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.1.9", features = ["derive"] }
itertools = "0.10.5"
tensorflow = "0.20.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

hb_utils  = { path = "hb_utils" }
hb_macros = { path = "hb_macros" }
base64 = "0.21.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
file_shred = "1.1.2"
zeroize = "1.6.0"


