[package]
name = "hb_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.10", features = ["full"] }
tracing = "0.1.37"
lazy_static = "1.4.0"
hyper = "1.0.0-rc.2"
itertools = "0.10.5"

[lib]
name = "hb_macros"
path = "src/lib.rs"
proc-macro = true
