[package]
name = "hb_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.0-rc.2"
hyper = "1.0.0-rc.2"
lazy_static = "1.4.0"
serde = "1.0.160"
serde_json = "1.0.96"

[lib]
name = "hb_utils"
path = "src/lib.rs"

